fixed login button issues, added logout button, added some spacing in dorm pages

--- a/site/src/styles/Events.module.css
+++ b/site/src/styles/Events.module.css
@@ -13,7 +13,19 @@
   font-size: 30px;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
+  line-height: 10px;
+}
+
+.title_right {
+  width: 100%;
+  margin-top: 2.5vh;
+  padding-bottom: .5vw;
+  display: inline-block;
+  font-size: 30px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
   line-height: 10px;
 }
 
@@ -43,16 +55,6 @@
   border: 2px solid black;
   border-radius: 20px;
   height: auto;
-}
-
-.title_right {
-  padding-bottom: .5vw;
-  display: inline-block;
-  font-size: 30px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 8px;
 }
 
 .top_wrapper {
