--- a/site/src/styles/Wiki.module.css
+++ b/site/src/styles/Wiki.module.css
@@ -41,10 +41,19 @@
   font-size: 20px;
 }
 
+.description hr {
+  border: 1.25px solid black;
+  margin-top: 3vh;
+  margin-bottom: 2vh;
+}
+
+.description h3 {
+  margin-bottom: 1vh;
+}
+
 .review_box {
-  margin-top: 200px;
+  margin-top: 10vh;
   row-gap: 50px;
-  
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
@@ -159,7 +168,6 @@
 }
 
 .wiki_grid {
-  
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -199,8 +207,8 @@
 .hr {
   width: 80%;
   border: 2px solid var(--uw-purple);
+  margin-bottom: 1.5vh;
 }
-
 
 .hidden {
   visibility: hidden;
@@ -214,6 +222,11 @@
   width: 40vw;
 }
 
+
 .average {
-  margin-top: auto;
+  margin-top: 2vh;
+}
+
+.average h3 {
+  margin-bottom: 1vh;
 }
